dhall/tests/type-inference/failure/unit/RecordLitDuplicateFieldsCollidingRecords.txt
Type error: error: DuplicateFieldName
 --> <current file>:1:22
  |
...
8 | { x = { y = 0 }, x = { y = 0 } }
  |                      ^^^^^^^^^ DuplicateFieldName
  |
